Added an svg logo along with a background image and added smooth scrolling to the page.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <main class="hero">
-        <img src="" alt="" class="">
+        <img src="assets/images/jd_logo.svg" alt="Logo" class="logo">
     </main>
     
 </body>
