Added a cloud and lightning bolt svg and created a div to display the cloud and have the lightning bolt appear when hovering over the cloud.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <main class="hero">
         <img src="assets/images/jd_logo.svg" alt="Logo" class="logo">
+        <div class="cloud">
+            <img src="assets/images/cloud.svg" alt="cloud" class="cloud-img">
+            <img src="assets/images/lightning.svg" alt="Lightning bolt" class="lightning-bolt">
+        </div>
     </main>
     
 </body>
