Deleted a logo and background image and added a revised logo and background image.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <main class="hero">
-        <img src="assets/images/jd_logo.svg" alt="Logo" class="logo">
+        <img src="assets/images/jd_logo.webp" alt="Logo" class="logo">
         <div class="cloud">
             <img src="assets/images/cloud.svg" alt="cloud" class="cloud-img">
             <img src="assets/images/lightning.svg" alt="Lightning bolt" class="lightning-bolt">
