Added a new lightning bolt svg and adjsuted some css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="assets/images/jd_logo.webp" alt="Logo" class="logo">
         <div class="cloud">
             <img src="assets/images/cloud.svg" alt="cloud" class="cloud-img">
-            <img src="assets/images/lightning.svg" alt="Lightning bolt" class="lightning-bolt">
+            <img src="assets/images/lightning-bolt.svg" alt="Lightning bolt" class="lightning-bolt">
         </div>
     </main>
     
